--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,24 @@
-# Python
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-*.so
-.pytest_cache/
-.mypy_cache/
-.ruff_cache/
-
-# Virtual env
-.venv/
-venv/
-env/
-
-# Node / Frontend
-node_modules/
-dist/
-build/
+# Logs
+logs
 *.log
-pnpm-lock.yaml
-yarn.lock
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# IDE / OS
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-*.swp
-.idea/
-.vscode/
-
-# Coverage / reports
-coverage*/
-htmlcov/
-*.coverage
-
-# Misc
-*.sqlite3
-*.db
-# Python
-backend/.venv/
-__pycache__/
-*.pyc
-
-# Node
-frontend/node_modules/
-frontend/dist/
-
-# Env / secrets
-.env
-*.env
-
-# OS
-.DS_Store
-Thumbs.db
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
